--- a/TMS/TMS/Areas/Admin/Views/ManageUser/CreateRequester.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/CreateRequester.cshtml
@@ -8,24 +8,17 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary("");
     <div class="form-group">
-        <label class="col-sm-2 control-label">Username</label>
-        <div class="col-sm-10">
-            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="col-sm-2 control-label">Password</label>
-        <div class="col-sm-10">
-            @Html.TextBoxFor(m => m.Password, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="form-group">
         <label class="col-sm-2 control-label">Email</label>
         <div class="col-sm-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", id = "email-txt" })
             @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-2 control-label">Username</label>
+        <div class="col-sm-10">
+            @Html.TextBoxFor(m => m.Username, new { @class = "form-control", id = "username-txt" })
+            @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
@@ -38,7 +31,7 @@
     <div class="form-group">
         <label class="col-sm-2 control-label">Birthday</label>
         <div class="col-sm-10">
-            @Html.TextBoxFor(m => m.Birthday, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.Birthday, new { @class = "form-control datetime" })
             @Html.ValidationMessageFor(m => m.Birthday, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -52,9 +45,10 @@
     <div class="form-group">
         <label class="col-sm-2 control-label">Gender</label>
         <div class="col-sm-10">
-            <span style="padding-right: 15px">@Html.RadioButtonFor(m => m.Gender, true)<label>Male</label></span>
-            <span>@Html.RadioButtonFor(m => m.Gender, false)<label>Female</label></span>
-            @Html.ValidationMessageFor(m => m.Gender, "", new { @class = "text-danger" })
+            @Html.DropDownListFor(m => m.Gender, new List<SelectListItem>{
+                new SelectListItem{ Text = "Male", Value = "true"},
+                new SelectListItem{ Text = "Female", Value = "false"}
+                }, "--Choose gender--", new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
@@ -95,4 +89,9 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script>
+        $("#email-txt").keyup(function () {
+            $("#username-txt").val($("#email-txt").val());
+        });
+    </script>
 }
