--- a/TMS/TMS/Areas/Admin/Views/ManageUser/EditRequester.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/EditRequester.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TMS.Models.RequesterRegisterViewModel
 @{
-    ViewBag.Title = "Create Requester";
+    ViewBag.Title = "Edit Requester";
     Layout = "~/Views/Shared/TMSLayout.cshtml";
 }
 @using (Html.BeginForm("EditRequester", "ManageUser", new { id = ViewBag.id }, FormMethod.Post, new { @class = "form-horizontal", role = "form", area = "Admin" }))
@@ -9,8 +9,8 @@
     <div class="form-group">
         <label class="col-sm-2 control-label">Username</label>
         <div class="col-sm-10">
-            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", disabled = "disabled" })
-            @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
+            <input type="text" class="form-control" disabled="disabled" value="@ViewBag.username" />
+            @*@Html.TextBox(null, new { @class = "form-control", disabled = "disabled", value = ViewBag.username })*@
         </div>
     </div>
     <div class="form-group">
@@ -30,7 +30,7 @@
     <div class="form-group">
         <label class="col-sm-2 control-label">Birthday</label>
         <div class="col-sm-10">
-            @Html.TextBoxFor(m => m.Birthday, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.Birthday, new { @class = "form-control datetime" })
             @Html.ValidationMessageFor(m => m.Birthday, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -44,9 +44,11 @@
     <div class="form-group">
         <label class="col-sm-2 control-label">Gender</label>
         <div class="col-sm-10">
-            <span style="padding-right: 15px">@Html.RadioButtonFor(m => m.Gender, true)<label>Male</label></span>
-            <span>@Html.RadioButtonFor(m => m.Gender, false)<label>Female</label></span>
-            @Html.ValidationMessageFor(m => m.Gender, "", new { @class = "text-danger" })
+            @*@Html.DropDownListFor(m => m.Gender, EnumHelper.GetSelectList(typeof(TMS.Utils.Gender)), "--Choose gender--", new { @class = "form-control" })*@
+            @Html.DropDownListFor(m => m.Gender, new List<SelectListItem>{
+                new SelectListItem{ Text = "Male", Value = "true"},
+                new SelectListItem{ Text = "Female", Value = "false"}
+                }, "--Choose gender--", new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
