--- a/TMS/TMS/Areas/Admin/Views/ManageUser/Requester.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/Requester.cshtml
@@ -2,14 +2,34 @@
 
 @{
     ViewBag.Title = "Manage Requesters";
-    Layout = "~/Views/Shared/TMSLayout.cshtml";
+    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
+<style>
+    #requester-table th {
+        font-size: 18px;
+    }
+
+    #requester-table td {
+        font-size: 16px;
+        vertical-align: middle;
+    }
+</style>
 <section class="content">
     <div class="row">
         <div class="col-xs-12">
-            <div class="box">
+            <div class="box box-primary">
                 <div class="box-body">
                     <p>@Html.ActionLink("Create New", "CreateRequester", null, new { @class = "btn btn-success" })</p>
+                    <div class="pull-right" style="margin-right: 20px">
+                        <label>Availability:</label>
+                        <select id="availability-dropdown">
+                            <option value="2">All</option>
+                            <option value="1">Enabled Requesters</option>
+                            <option value="0">Disabled Requesters</option>
+                        </select>&nbsp;&nbsp;
+                        <label>Search:</label>
+                        <input type="text" id="search-txt" />
+                    </div>
                     <table class="table table-bordered table-striped dataTable" id="requester-table">
                         <thead>
                             <tr>
@@ -35,24 +55,26 @@
     <script>
         var initDataTable = function () {
             $("#requester-table").DataTable({
-                //"bRetrieve": true,
                 serverSide: true,
-                //"bScrollCollapse": true,
                 sort: true,
-                ajax: {
-                    url: "/Admin/ManageUser/GetRequesters",
-                    data: {
-                        email_search_key: $("#email-search-txt").val()
-                    }
-                },
                 processing: true,
-                //fnServerParams: function (aoData) {
-                //    aoData.push({ 'name': 'email_search_key', 'value': $("#email-search-txt").val() });
-                //},
                 fnDrawCallback: function () {
                     $('.toggle').bootstrapToggle();
                 },
-                lengthMenu: [10, 20, 50],
+                //lengthMenu: [10, 20, 50],
+                lengthMenu: [8],
+                lengthChange: false,
+                filter: false,
+                language: {
+                    infoFiltered: ""
+                },
+                ajax: {
+                    url: "/Admin/ManageUser/GetRequesters",
+                    data: function (d) {
+                        d.availability_select = $("#availability-dropdown").val(),
+                        d.search_text = $("#search-txt").val()
+                    }
+                },
                 columnDefs: [
                     {
                         "targets": [0],
@@ -84,15 +106,18 @@
                         "targets": [4],
                         "sortable": false,
                         "render": function (data, type, row) {
-                            return '<input type="checkbox" checked data-toggle="toggle" class="toggle" data-onstyle="success">';
+                            if (row[5] == true) {
+                                return '<input type="checkbox" checked data-toggle="toggle" class="toggle" data-onstyle="success" onchange="toggleStatus(\'' + row[0] + '\')">';
+                            } else {
+                                return '<input type="checkbox" data-toggle="toggle" class="toggle" data-onstyle="success" onchange="toggleStatus(\'' + row[0] + '\')">';
+                            }
                         }
                     },
                     {
                         "targets": [5],
                         "sortable": false,
                         "render": function (data, type, row) {
-                            return '<a href="/Admin/ManageUser/EditRequester/' + row[0] + '"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>&nbsp&nbsp'
-                            + '<a href="javascript:void(0)" onclick="removeRequester(\'' + row[0] + '\')"><i class="fa fa-trash" aria-hidden="true"></i></a>';
+                            return '<center><a href="/Admin/ManageUser/EditRequester/' + row[0] + '"><i class="fa fa-pencil-square-o fa-lg" aria-hidden="true"></i></a></center>';
                         }
                     }
                 ]
@@ -101,21 +126,24 @@
 
         var reloadDataTable = function () {
             var oTable = $("#requester-table").dataTable();
-            oTable._fnPageChange(0);
-            oTable._fnAjaxUpdate();
+            oTable.api().ajax.reload();
         };
 
         $(document).ready(function () {
             initDataTable();
         });
 
-        $("#email-search-txt").keyup(function () {
+        $("#search-txt").keyup(function () {
             reloadDataTable();
         });
 
-        var removeRequester = function (id) {
+        $("#availability-dropdown").change(function () {
+            reloadDataTable();
+        });
+
+        var toggleStatus = function (id) {
             $.ajax({
-                url: "/Admin/ManageUser/RemoveRequester",
+                url: "/Admin/ManageUser/ToggleStatus",
                 data: {
                     id: id
                 },
@@ -123,8 +151,10 @@
                 type: "POST",
                 success: function (data) {
                     if (data.success) {
-                        alert(data.message);
-                        reloadDataTable();
+                        $.notify(data.message, "success")
+                        $("#requester-table").dataTable().api().ajax.reload(null, false);
+                    } else {
+                        $.notify(data.message, "error")
                     }
                 }
             });
