--- a/TMS/TMS/Content/Site.css
+++ b/TMS/TMS/Content/Site.css
@@ -1,9 +1,9 @@
-﻿/*body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿body {
+    /*padding-top: 50px;
+    padding-bottom: 20px;*/
 }
 
-/* Set padding to keep content from hitting the edges */
+/* Set padding to keep content from hitting the edges 
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
@@ -21,4 +21,28 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.profile-avatar {
+    width: 80%;
+    min-height: 250px;
+    margin: 10px auto;
+    border: 1px dashed gray;
+    border-radius: 10px;
+}
+
+.page-header-custom {
+    margin: 0px 15px -10px 15px;
+    padding: 10px 15px;
+    border-left: 20px double green;
+    background-color: white;
+    vertical-align: middle;
+}
+
+.page-header-custom *{
+    margin: 0px;
+}
+
+.box-body * {
+    font-size: 16px;
 }
