--- a/TMS/TMS/Content/Site.css
+++ b/TMS/TMS/Content/Site.css
@@ -22,3 +22,11 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.userslookup {
+    background: url(../Content/img/add-requester-icon.ico);
+    width: 25px;
+    height: 25px;
+    margin-top: 5px;
+    margin-left: -50px;
+}
