--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -56,70 +56,74 @@
 @section scripts{
     @Scripts.Render("~/bundles/datatables")
     <script>
+        var ticketTable = null;
         setActiveTicketMenu();
-        $("#ticket-table").DataTable({
-            processing: true,
-            serverSide: true,
-            paging: true,
-            sort: true,
-            ajax: {
-                url: "/HelpDesk/ManageTicket/GetTickets"
-            },
-            "columnDefs": [
-                {
-                    "render": function (data, type, row) {
-                        return row[0];
-                    },
-                    "targets": 0
-                },
-                {
-                    "render": function (data, type, row) {
-                        return row[1];
-                    },
-                    "targets": 1
-                },
-                {
-                    "render": function (data, type, row) {
-                        return row[2];
-                    },
-                    "targets": 2
-                },
-                {
-                    "render": function (data, type, row) {
-                        return row[3];
-                    },
-                    "targets": 3
-                },
-                {
-                    "render": function (data, type, row) {
-                        return row[4];
-                    },
-                    "targets": 4
-                },
-                {
-                    "render": function (data, type, row) {
-                        return row[5];
-                    },
-                    "targets": 5
-                },
-                {
-                    "render": function (data, type, row) {
-                        return row[6];
-                    },
-                    "targets": 6,
-                    "type": "date"
-                },
+        initTicketTable();
 
-                {
-                    "render": function (data, type, row) {
-                        var url = '@Url.Action("Edit", "ManageTicket")/' + row[7];
-                        return "<a href='"+url+"'  class='btn btn-xs btn-primary btn-edit-ticket' ><i class='fa fa-pencil'></i></a>";
+        function initTicketTable() {
+
+            ticketTable = $("#ticket-table").DataTable({
+                processing: true,
+                serverSide: true,
+                paging: true,
+                sort: true,
+                ajax: {
+                    url: "/HelpDesk/ManageTicket/GetTickets"
+                },
+                "columnDefs": [
+                    {
+                        "render": function (data, type, row) {
+                            return row[0];
+                        },
+                        "targets": 0
                     },
-                    "targets": 7
-                }]
-        });
+                    {
+                        "render": function (data, type, row) {
+                            return row[1];
+                        },
+                        "targets": 1
+                    },
+                    {
+                        "render": function (data, type, row) {
+                            return row[2];
+                        },
+                        "targets": 2
+                    },
+                    {
+                        "render": function (data, type, row) {
+                            return row[3];
+                        },
+                        "targets": 3
+                    },
+                    {
+                        "render": function (data, type, row) {
+                            return row[4];
+                        },
+                        "targets": 4
+                    },
+                    {
+                        "render": function (data, type, row) {
+                            return row[5];
+                        },
+                        "targets": 5
+                    },
+                    {
+                        "render": function (data, type, row) {
+                            return row[6];
+                        },
+                        "targets": 6,
+                        "type": "date"
+                    },
 
-
+                    {
+                        "render": function (data, type, row) {
+                            var url = '@Url.Action("Edit", "ManageTicket")/' + row[7];
+                            return "<a href='"+url+"'  class='btn btn-xs btn-primary btn-edit-ticket' ><i class='fa fa-pencil'></i></a>";
+                        },
+                        "targets": 7
+                    }]
+            });
+        }
     </script>
 }
 
