--- a/TMS/TMS/Areas/HelpDesk/Views/Shared/_Layout.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/Shared/_Layout.cshtml
@@ -77,14 +77,14 @@
                         <li class="dropdown user user-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <img src="~/Content/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                                <span class="hidden-xs">Requester</span>
+                                <span class="hidden-xs">Help desk</span>
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- User image -->
                                 <li class="user-header">
                                     <img src="~/Content/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                                     <p>
-                                        Requester
+                                        Help desk
                                         <small>FPT Software</small>
                                     </p>
                                 </li>
@@ -121,7 +121,7 @@
                         <img src="~/Content/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                     </div>
                     <div class="pull-left info">
-                        <p>Requester</p>
+                        <p>Help desk</p>
                         <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
                     </div>
                 </div>
@@ -198,6 +198,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/app")
+    @Scripts.Render("~/bundles/datatables")
     @RenderSection("scripts", required: false)
 </body>
 </html>
