--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -7,8 +7,8 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="box box-primary">
-            <div class="box-header padding-bottom-20 pull-left ">
-                <a class="btn btn-block btn-primary" href='@Url.Action("Create", "ManageTicket")' ">
+            <div class="box-header padding-bottom-20 pull-left " style="width:100%">
+                <a class="btn btn-block btn-primary" style="width: 150px;" href='@Url.Action("Create", "ManageTicket")' ">
                     Create New Ticket
                 </a>
             </div>
