--- a/TMS/TMS/Areas/HelpDesk/Views/Shared/_Layout.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition skin-black-light sidebar-mini">
     <div class="wrapper">
         <header class="main-header">
             <!-- Logo -->
@@ -174,11 +174,11 @@
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
             <!-- Content Header (Page header) -->
-            <section class="content-header">
+            @*<section class="content-header">
                 <h1>
                     @ViewBag.Title
                 </h1>
-            </section>
+            </section>*@
             <!-- Main content -->
             <section class="content">
                 @RenderBody()
