--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Create.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TMS.Models.Ticket
 @{
     Layout = "~/Areas/HelpDesk/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Create";
+    //ViewBag.Title = "Create";
 }
 
 @using (Html.BeginForm())
@@ -10,13 +10,13 @@
 
     <div class="row">
         <div class="col-xs-12">
-            <div class="box box-primary">
-                <div class="box-header padding-bottom-20 pull-left ">
+            <div class="box box-solid">
+                <div class="box-header with-border">
+                    <h4 class="box-title">Create New Ticket</h4>
                 </div>
                 <!-- /.box-header -->
                 <div class="box-body">
                     <div class="form-horizontal">
-                        <hr />
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         @Html.HiddenFor(model => model.ID)
                         <div class="row">
@@ -162,7 +162,7 @@
                                 <div class="form-group">
                                     @Html.LabelFor(model => model.Solution, htmlAttributes: new { @class = "control-label col-xs-2" })
                                     <div class="col-xs-10">
-                                        @Html.TextAreaFor(model => model.Solution, new { htmlAttributes = new { @class = "form-control" }, cols=100, rows = 3 })
+                                        @Html.TextAreaFor(model => model.Solution, new { htmlAttributes = new { @class = "form-control" }, cols = 100, rows = 3 })
                                         @Html.ValidationMessageFor(model => model.Solution, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
