--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -1,14 +1,15 @@
 ﻿@model IEnumerable<TMS.Models.Ticket>
 @{
     Layout = "~/Areas/HelpDesk/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Ticket Management";
+    //ViewBag.Title = "Ticket Management";
 }
 
 <div class="row">
     <div class="col-xs-12">
-        <div class="box box-primary">
-            <div class="box-header padding-bottom-20 pull-left " style="width:100%">
-                <a class="btn btn-block btn-primary" style="width: 150px;" href='@Url.Action("Create", "ManageTicket")' ">
+        <div class="box box-solid">
+            <div class="box-header with-border">
+                <h4 class="box-title">Ticket Management</h4>
+                <a class="btn btn-block bg-olive btn-flat pull-right" style="width: 135px;" href='@Url.Action("Create", "ManageTicket")' ">
                     Create New Ticket
                 </a>
             </div>
