Technician Ticket Index

--- a/TMS/TMS/Areas/Technician/Views/ManageTicket/Solve.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/ManageTicket/Solve.cshtml
@@ -3,12 +3,15 @@
 }
 @{
     ViewBag.Title = "Solve Ticket";
+    var ticket = ViewBag.Ticket;
+    var solveUser = ViewBag.solveUser;
+    var createdUser = ViewBag.CreatedUser  ;
 }
 
 
 <div class="row col-md-12">
     <div class="box box-primary">
-
+        
     </div>
 </div>
 
