--- a/TMS/TMS/Areas/Technician/Views/Shared/_Layout.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition skin-blue-light sidebar-mini">
     <div class="wrapper">
         <header class="main-header">
             <!-- Logo -->
